# y-clipboard

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.js  LICENSE  README.md  README.zh.md  index.html  init-plugin.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
src/: App.tsx  global.scss  main.ts  preload.ts  renderer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: p-icon.icns  y-icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard_history/: mod.rs
src-tauri/src/clipboard_monitor/: monitor.rs  plugin.rs
src-tauri/src/clipboards/: mod.rs
src-tauri/src/clipboards/commands/: linux.rs  macos.rs  windows.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/db/: database.rs  plugin.rs
src-tauri/src/lib/: mod.rs  window.rs
src-tauri/src/lib/clipboard_history/: mod.rs
src-tauri/src/lib/clipboard_monitor/: mod.rs  monitor.rs  plugin.rs
src-tauri/src/lib/db/: database.rs  mod.rs  plugin.rs
src-tauri/src/lib/device/: mod.rs
src-tauri/src/lib/os/: mod.rs
src-tauri/src/lib/paste/: mod.rs
src-tauri/src/lib/shortcut/: hotkey_map.rs  manage.rs  mod.rs  plugin.rs
src-tauri/src/lib/tray/: mod.rs
src-tauri/src/lib/utils/: active.rs  mod.rs  path.rs
src-tauri/src/lib/window/: handler.rs  invoke.rs  mod.rs  route.rs
src-tauri/src/panels/: mod.rs
src-tauri/src/panels/commands/: linux.rs  macos.rs  windows.rs
src-tauri/src/panels/monitor/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/panels/screen_detect/: mod.rs
src-tauri/src/paste/: mod.rs
src-tauri/src/paste/commands/: macos.rs  windows.rs
src-tauri/src/plugins/clipboard_manager/: Cargo.toml
src-tauri/src/plugins/clipboard_manager/permissions/autogenerated/: reference.md
src-tauri/src/plugins/clipboard_manager/permissions/schemas/: schema.json
src-tauri/src/plugins/clipboard_manager/src/: lib.rs
src-tauri/src/plugins/clipboard_manager/src/clipboard_monitor/: commands.rs  mod.rs  monitor.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/shortcuts/commands/: mod.rs
src-tauri/src/shortcuts/manager/: hotkey_map.rs  mod.rs
src-tauri/src/shortcuts/register/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/trays/: mod.rs
src-tauri/src/utils/: active.rs  mod.rs  path.rs  stringify.rs
src-tauri/src/utils/os_action/: mod.rs
src-tauri/src/utils/os_action/commands/: macos.rs  mod.rs
src/@types/: i18next.d.ts
src/actions/clipboard/: extra.ts  index.ts  type.ts
src/actions/datamanage/: index.ts  type.ts
src/actions/shortcut/: index.ts  type.ts
src/actions/windows/: index.ts  type.ts
src/components/ClipCard/: CardTitle.tsx  index.module.scss  index.tsx
src/components/Menu/: index.module.scss  index.tsx
src/components/NavBar/: index.module.scss  index.tsx
src/components/Tags/: index.module.scss  index.tsx
src/hooks/: useEscape.tsx  useTauriListen.ts
src/locale/: i18next.d.ts  index.ts
src/locale/en/: translation.json
src/locale/zh/: translation.json
src/script/: paste.script.ts
src/script/apple/: paste.ts
src/script/microsoft/: paste.ts
src/types/: global.d.ts
src/utils/: index.ts  keyMap.ts  localStorage.ts
src/views/ClipHistoryBoard/: index.hooks.tsx  index.module.scss  index.tsx
src/views/ConfigMenu/: index.module.scss  index.tsx
src/views/ConfigMenu/History/: index.module.scss  index.tsx
src/views/ConfigMenu/Hotkey/: index.module.scss  index.tsx
src/views/ConfigMenu/SwitchLang/: index.module.scss  index.tsx
src/views/ConfigMenu/Version/: index.module.scss  index.tsx
src/views/Layout/: index.module.scss  index.tsx
