[package]
name = "y-clip"
version = "0.0.1"
description = "A paste history tool"
authors = ["Yuan"]
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all",
  "system-tray",
  "notification-all",
  "window-all",
  "shell-open",
  "global-shortcut-all",
  "os-all",
  "macos-private-api",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "2.0.0"
clipboard-master = "3.1.3"
base64 = "0.22.1"
image = "0.25.1"
clipboard-files = "0.1.1"
clipboard-rs = "0.1.7"
rust-crypto = { version = "0.2.36" }
uuid = "1.7.0"
rdev = "=0.4.6"
parking_lot = "0.12.1"
anyhow = "1.0"
once_cell = "1.17.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.13", features = ["full"] }
dunce = "1.0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
