[package]
name = "y-clip"
version = "0.0.1"
description = "A paste history tool"
authors = ["Yuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "y_clip"
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-ico",
  "devtools",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
device_query = "3.0.1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
thiserror = "2.0.12"
rdev = "0.5.3"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# tauri-plugin-clipboard-manager = { path = "../src-tauri/src/plugins/clipboard_manager" }
base64 = "0.22.1"
image = "0.25.1"
uuid = "1.7.0"
rust-crypto = { version = "0.2.36" }
clipboard-rs = "0.2.1"
clipboard-master = "3.1.3"
anyhow = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.44.1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
