[package]
name = "tauri-plugin-clipboard-manager"
version = "0.1.0"
authors = ["Yuan"]
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-clipboard-manager"

[dependencies]
tauri = { version = "2.3.1" }
serde = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
image = "0.25.1"
uuid = "1.7.0"
clipboard-rs = "0.2.1"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
